# lightapt_f

./: .gitignore  README.md  TODO.md  lightserver.py  pyproject.toml  requirements.txt  sonar-project.properties  test1.py
.github/workflows/: codeql.yml  sonarcloud.yml
client/templates/: 403.html  404.html  500.html  bugreport.html  camera.html  client.html  debug.html  desktop.html  device_manager.html  devicehub.html  devices.html  error.html  focuser.html  forget-password.html  guider.html  imageviewer.html  index.html  indiweb.html  jsoneditor.html  login.html  main.html  ndesktop.html  novnc.html  register.html  scripteditor.html  search.html  settings.html  skymap.html  system.html  telescope.html  tools.html  webssh.html
config/: camera.json  config.json  password.json
config/camera/: Sim .json
config/indiweb/: profiles.db
doc/: giveme.txt  onlyperson.txt
driver/: __init__.py  basiccamera.py  basicdevice.py  basicdome.py  basicfilterwheel.py  basicfocuser.py  basicsolver.py  basictelescope.py
driver/camera/: __init__.py  ascom.py  indi.py  qhyccd.py  zwoasi.py
libs/: README.md
pyindi_websocket_api/: IndiWebsocketTornadoServer.py
server/: config.py  lightserver.py  webapp.py  webindi.py  webpage.py  websys.py  webtools.py  wscamera.py  wsdevice.py  wsdome.py  wsexception.py  wsfocuser.py  wsguider.py  wsserver.py  wssolver.py  wstelescope.py
tools/: install_indi.sh  upgrade.sh  upgrade_all_libraries.sh  vnc_autostart.sh
utils/: i18n.py  image.py  jsonsearch.py  lightlog.py  sqlitedict.py  utility.py  webutils.py  xmltodict.py
(+146 files in other folders)
